--- a/home.html
+++ b/home.html
@@ -156,8 +156,8 @@
             </div>
             <div class="sidebar-menu">
                 <div class="menu-item active">Chats</div>
-                <div class="menu-item" onclick="window.location.href='groups.html'">Groups</div>
-                <div class="menu-item">Settings</div>
+                <div class="menu-item" onclick="window.location.href='Groups.html'">Groups</div>
+                <div class="menu-item" onclick="window.location.href='settings.html'">Settings</div>
             </div>
         </div>
 
