--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Advanced Stress Testing Tool</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="d.css">
 </head>
 <body>
     <div class="container">
@@ -26,6 +26,6 @@
         </form>
         <div id="output"></div>
     </div>
-    <script src="script.js"></script>
+    <script src="d.js"></script>
 </body>
 </html>
