--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Advanced Stress Testing Tool</h1>
+        <h1>Spyrox Stresser</h1>
         <form id="stressForm">
             <label for="target">Target (IP or URL):</label>
             <input type="text" id="target" name="target" required>
