--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Advanced Stress Testing Tool</title>
+    <title>spyrox 0.0.2</title>
     <link rel="stylesheet" href="d.css">
 </head>
 <body>
