--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </head>
 <body>
     <div id="controls">
-        <h1>RedEvil C2</h1>
+        <h1>RedEvil C2 | Fire Uptade</h1>
         <label for="target-url">Target URL:</label>
         <input type="text" id="target-url" placeholder="Ur Target Here">
         <br>
