--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RedEvil C2</title>
+    <title>RedEvil C2 Network</title>
     <style>
         body {
             font-family: 'Courier New', Courier, monospace;
@@ -54,8 +54,8 @@
 </head>
 <body>
     <div id="controls">
-        <h1>RedEvil C2</h1>
-        <label for="target-url">Target URL:</label>
+        <h1>RedEvil Network</h1>
+        <label for="target-url">Target :</label>
         <input type="text" id="target-url" placeholder="Your Target Here">
         <br>
         <label for="attack-type">Attack Type:</label>
