--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 </head>
 <body>
     <div id="disclaimer">
-        👺 RedEvil Stresser > is a state-of-the-art DDoS tool engineered to simulate high-intensity distributed denial-of-service attacks. Unlike traditional tools that focus on a single layer, Maskers Storm is a dual-layer powerhouse, capable of launching sophisticated attacks on both Layer 7 and Layer 4. This versatility makes it an indispensable tool for anyone looking to test the resilience of their networks, applications, or infrastructure.
+        👺 RedEvil Stresser > is a state-of-the-art DDoS tool engineered to simulate high-intensity distributed denial-of-service attacks
     </div>
     <div id="controls">
         <h1>Red Evil Stresser</h1>
