--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
 </head>
 <body>
   <div class="container">
-    <h1>EvilnEt Locker</h1>
-    <p class="tagline">Secure Server Storage - by BlackMaskers</p>
+    <h1>EvilnEt Locket</h1>
+    <p class="tagline">Secure File Storage - Hacker Style</p>
 
     <!-- File Upload Section -->
     <div class="upload-section">
@@ -174,6 +174,20 @@
     // Array to store uploaded files
     let files = [];
 
+    // Load files from local storage on page load
+    function loadFilesFromStorage() {
+      const storedFiles = localStorage.getItem('serverFiles');
+      if (storedFiles) {
+        files = JSON.parse(storedFiles);
+        updateFileList();
+      }
+    }
+
+    // Save files to local storage
+    function saveFilesToStorage() {
+      localStorage.setItem('serverFiles', JSON.stringify(files));
+    }
+
     // Import Button Logic
     document.getElementById('importBtn').addEventListener('click', () => {
       document.getElementById('fileInput').click(); // Trigger file input
@@ -186,9 +200,10 @@
 
       if (filesToUpload.length > 0) {
         for (let i = 0; i < filesToUpload.length; i++) {
-          files.push(filesToUpload[i]);
+          files.push({ name: filesToUpload[i].name, data: URL.createObjectURL(filesToUpload[i]) });
         }
         updateFileList();
+        saveFilesToStorage();
         alert('Files uploaded successfully!');
       } else {
         alert('Please select a file to upload.');
@@ -213,7 +228,7 @@
       if (selectedFiles.length > 0) {
         selectedFiles.forEach(file => {
           const link = document.createElement('a');
-          link.href = URL.createObjectURL(file);
+          link.href = file.data;
           link.download = file.name;
           link.click();
         });
@@ -231,6 +246,7 @@
 
       files = remainingFiles;
       updateFileList();
+      saveFilesToStorage();
       alert('Selected files deleted successfully!');
     });
 
@@ -258,6 +274,9 @@
         });
       }
     }
+
+    // Load files when the page loads
+    loadFilesFromStorage();
   </script>
 </body>
 </html>
