--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>EvilnEt Locket - Secure File Server</title>
+  <title>EvilnEt Locker - Secure File Server</title>
   <style>
     /* General Styles */
     body {
@@ -144,8 +144,8 @@
 </head>
 <body>
   <div class="container">
-    <h1>EvilnEt Locket</h1>
-    <p class="tagline">Secure File Storage - Hacker Style</p>
+    <h1>EvilnEt Locker</h1>
+    <p class="tagline">Secure Server Storage - By BlackMaskers</p>
 
     <!-- File Upload Section -->
     <div class="upload-section">
