--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
     <div class="container">
         <div class="header">
             <div class="logo">
-                <i class="fas fa-code"></i> Riko - HostMe <span>PRO</span>
+                <i class="fas fa-code"></i> Riko - HostMe <span>DISCORD</span>
             </div>
             <div class="controls">
                 <button class="btn btn-discord" id="discord-btn">
